feat: enable post-creation profile editing
